--- a/src/editor.scss
+++ b/src/editor.scss
@@ -1,5 +1,3 @@
-.wp-block-create-block-boilerplate {
-border: 1px dotted red;
-border:1px dotted blue;  
-
+.wp-block-blocks-course-latest-posts {
+	border: 1px dotted rgb(255, 0, 0);
 }
