--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,3 @@
-.wp-block-create-block-boilerplate {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+.wp-block-blocks-course-latest-posts {
+	border: 1px dotted rgb(255, 0, 0);
 }
