--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,40 @@
-.wp-block-blocks-course-latest-posts {
-	border: 1px dotted rgb(255, 0, 0);
+ul.wp-block-blocks-course-latest-posts {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+
+	li {
+
+		img {
+			margin-bottom: 10px;
+			aspect-ratio: 16/10;
+			object-fit: cover;
+			object-position: center;
+		}
+
+		h5 {
+			font-size: 20px;
+			line-height: 1.3;
+			margin: 0 0 10px;
+
+			a {
+				color: #000;
+			}
+
+			time {
+				font-size: 12px;
+				color: #969696;
+			}
+		}
+
+		p {
+			font-size: 14px;
+			color: #303030;
+			line-height: 1.6;
+			margin: 15px 0 0;
+		}
+	}
 }
